sandbox/output
MedicineClash.java:15: error: cannot find symbol
            .peek(System.out.println(customer))
                                     ^
  symbol:   variable customer
  location: class MedicineClash
1 error
